rns-lang/tests/snapshots/lexer-strings-basic_unterminated_string.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public Test
"String with no ending quote
.end
----- STDOUT -----

----- STDERR -----
Error: unterminated string literal
   ╭─[ test_data/integration/lexer/strings/basic_unterminated_string.ja:2:1 ]
   │
 2 │ "String with no ending quote
   │ ┬  
   │ ╰── this string literal is not terminated
   │ 
   │ Note: String literal is not terminated before the end of the line or file.
───╯
